<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiChess</string>
    <string name="action_settings">Settings</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Open Gallery</string>
    <string name="label_me">ME</string>
    <string name="label_peers">Peers</string>
    <string name="empty_message">Empty Mesage</string>
    <string name="search">Search</string>
    <string name="wifi_on_off">WifiP2p ON/OFF</string>
    <string name="empty">Empty</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="wifi">Wifi</string>
    <string name="chess">Chess</string>
    <string name="chat">Chat</string>
    <string name="share">Share</string>
    <string name="chatActivity">ChatActivity</string>

</resources>
