<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.p2pconnection.MainActivity" >

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:showAsAction="always"/>

    <item
        android:id="@+id/wifi"
        android:orderInCategory="100"
        android:icon="@drawable/wifi"
        android:title="@string/wifi_on_off"
        android:showAsAction="always" />

    <item
        android:id="@+id/chess"
        android:orderInCategory="100"
        android:title="@string/chess"/>
    <item
        android:id="@+id/chat"
        android:orderInCategory="100"
        android:title="@string/chat"/>
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>

</menu>
